--- a/detalhesVeiculo.css
+++ b/detalhesVeiculo.css
@@ -1,20 +1,57 @@
+.container-detalhes{
+    padding: 20px 18%;
+    flex:1;
+    margin-top:20px;
+}
+
+.imagem-carro{
+    width: 100%;
+    height: 500px;
+    /* object-fit: scale-down; */
+}
+
+.destaques-carro{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    padding: 0 5%;
+}
+
+.destaques-carro div{
+    display: grid;
+    justify-content: center;
+    text-align: center;
+}
+
+.destaques-carro div label{
+    margin-top: 10px;
+}
+
+.icon{
+    padding: 5px 15px;
+    width: 45px;
+    height: 45px;
+}
+
 @media only screen and (max-width: 1200px) {
 
     .container-detalhes{
         padding: 0;
+        margin-top: 0;
     }
 
     .display-car{
         display: grid;
     }
 
-    .imagens-carros {
+    .imagem-carro{
+        height: 100%;
         width: 100%;
-        height: 200px;
+        object-fit: cover;
     }
 
     .imagens-carros {
-        object-fit: scale-down;
+        width: 100%;
     }
 
     .conteudo{
