--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     }
 }
 
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 html, body{
     height: 100%;
     width: 100%;
@@ -16,7 +20,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f9;
+    background-color: rgb(243, 243, 243);
     color: #333;
     height: 100%;
 }
@@ -45,12 +49,61 @@ header a{
     text-decoration: none;
     flex-grow: 1; 
     text-align: center;  
+    margin-right: 11%;
 }  
 
 .container {
     padding: 20px 14%;
     flex:1;
 }
+
+
+/* Pagina de detalhes */
+
+.sobre-nos{
+    display: flex;
+    padding: 100px 14%;
+    flex:1;
+}
+
+.sobre-nos-conteudo{
+    width: 60%;
+}
+
+.sobre-nos-conteudo a{
+    text-decoration: none;
+    color: black;
+}
+
+.sobre-nos-conteudo article{
+    margin-top: 40px;
+}
+
+.sobre-nos-imagem{
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.sobre-nos-imagem img{
+    width: 100%;
+    height: 500px;
+    margin-left: 100px;
+}
+
+@media only screen and (max-width: 1200px) {
+    .sobre-nos-imagem{
+        display: none;
+    }
+
+    .sobre-nos-conteudo{
+        width: 100%;
+    }
+}
+
+/* Pagina de detalhes */
 
 .container-detalhes{
     padding: 20px 18%;
@@ -79,7 +132,7 @@ header a{
 }
 
 .card h3 {
-    margin: 15px 0;
+    margin: 10px 0;
     font-size: 1.5rem;
 }
 
@@ -95,12 +148,29 @@ header a{
     border: none;
     border-radius: 5px;
     font-size: 22px;
-    padding: 20px;
+    padding: 15px;
     cursor: pointer;
 }
 
 .botao-detalhe:hover{
     background: linear-gradient(90deg, #0154a7, #3c9eff);
+    transition: left 0.5s;
+}
+
+.botao-recuar{
+    background: linear-gradient(90deg, #ef0010, #ff5a5a);
+    color: white;
+    margin-bottom: 5px;
+    margin-top: 3px;
+    border: none;
+    border-radius: 5px;
+    font-size: 22px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.botao-recuar:hover{
+    background: linear-gradient(90deg, #860101, #ff0000);
     transition: left 0.5s;
 }
 
@@ -110,11 +180,7 @@ header a{
 .imagens-carros{
     width: 70%;
 }
-.imagem-carro{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
+
 .conteudo{
     width: 30%;
     padding: 30px 50px;
@@ -173,12 +239,28 @@ body {
     
 }
 .area-de-pesquisa input{
-    width: 75%;
+    width: 80%;
     height: 25px;
     padding: 10px;
     border: none;
     border-radius: 7px;
-    background: #d9d8d8;
+    background: #e0e0e0;
+}
+
+.areaDados{
+    display: grid;
+    text-align: left;
+    padding: 0 5%;
+    text-align: center;
+}
+
+.botoes-area-contactos{
+    display: grid;
+    width: 100%;
+}
+
+.botoes-area-contactos button{
+    width: 100%;
 }
 
 .botoes{
@@ -196,6 +278,80 @@ body {
 .botoes:hover{
     background: linear-gradient(90deg, #0154a7, #3c9eff);
     transition: left 0.5s;
+}
+
+.formulario{
+    background-color: white;
+    border-radius: 5px;
+    display: grid;
+    margin: 5% 30%;
+    height: 100%;
+    padding: 3% 10%;
+    align-content: space-between;
+    text-align: center;
+    box-shadow: 10px 10px 5px 12px lightblue;
+}
+
+.formulario textarea, input, select {
+    border-radius: 5px;
+    width: 100%;
+    border: 1px solid #7d7d7d;
+    padding: 3px;
+}
+
+.formulario #email{
+    margin-top: 10px;
+}
+
+.formulario  input,select{
+    height: 35px;
+}
+
+.formulario textarea{
+    height: 150px;
+    margin-top: 10px;
+}
+
+.formulario-criar{
+    background-color: white;
+    border-radius: 5px;
+    display: grid;
+    margin: 5% 22%;
+    height: 100%;
+    padding: 3% 8%;
+    align-content: space-between;
+    text-align: center;
+    box-shadow: 10px 10px 5px 12px lightblue;
+    border: none;
+}
+
+.formulario-criar textarea, input, select{
+    border-radius: 5px;
+    width: 100%;
+    border: 1px solid #7d7d7d;
+    padding: 3px;
+}
+
+.formulario-criar  input,select{
+    height: 35px;
+    margin-bottom: 3px;
+}
+
+.formulario-criar textarea{
+    height: 150px;
+    margin-bottom: 3px
+}
+
+@media only screen and (max-width: 1200px) {
+    
+    .formulario-criar, .formulario{
+        margin: 5%;
+    }
+
+    .container {
+        padding: 20px 3%;
+        flex:1;
+    }
 }
 
 footer {
