--- a/style.css
+++ b/style.css
@@ -354,13 +354,19 @@ body {
     }
 }
 
+#googleMap{
+    width:100%;
+    height:400px;
+    margin-top: 20px;
+}
+
 footer {
     background: #333;
     bottom: 0;
     width: 100%;
     color: white;
     text-align: center;
-    padding: 20px 0;
+    padding: 30px 0;
     margin-top: 20px;
     position: relative;
 }
